--- a/tese-exemplo.tex
+++ b/tese-exemplo.tex
@@ -47,6 +47,7 @@
 }
 
 \usepackage{todonotes}
+\usepackage{afterpage}
 
 \usepackage[Algoritmo]{algorithm}
 \usepackage{algorithmic}
@@ -269,7 +270,7 @@ framexrightmargin=10pt
 - Instituto de Matemática e Estatística, Universidade de São Paulo, São Paulo, 2020.\\
 Ao longo dos últimos anos, o conceito de Cidades Inteligentes vem ganhando popularidade, sendo promovido com os propósitos de aumentar a sustentabilidade e melhorar a qualidade de vida para os residentes de centros urbanos. Processamento de Eventos Complexos (CEP - \emph{Complex Event Processing}) é uma das técnicas mais usadas para processar dados em tempo real em grande volume e velocidade, como os provenientes de Cidades Inteligentes. CEP considera cada novo dado coletado como um evento e permite definir novos tipos de eventos a partir da identificação de padrões de ocorrência específicos de outros eventos. Escalabilidade e tolerância a falhas no ambiente de execução são requisitos não funcionais para o processamento de fluxos de dados que sofrem grande variação de volume ao longo do tempo, como em Cidades Inteligentes. O cumprimento destes requisitos é essencial para manter o sistema em funcionamento com a latência de detecção de eventos em patamares aceitáveis para sistemas de tempo real. O uso de plataformas de nuvem é conveniente para realizar o processamento de eventos de forma distribuída e escalável, pois permite o gerenciamento dinâmico de recursos computacionais. 
 As solução atuais de \textit{software} livre de CEP não oferecem suporte nativo para a execução em ambientes de nuvem, ou mesmo distribuídos.
-Este trabalho apresenta uma arquitetura de microsserviços para CEP distribuído nativa de nuvem, que gerencia dinamicamente os recursos computacionais usados na execução. Nela, o processamento de eventos complexos é dividido entre múltiplas instâncias de um mesmo microsserviço. O estilo arquitetural de coreografia foi usado, no qual a distribuição do processamento é coordenada entre as instâncias e não há um serviço nuclear que comanda todo o sistema. Isso resulta em uma maior tolerância a falhas, pois uma falha em uma única instância não afeta a detecção de eventos nas outras. Um protótipo da arquitetura de microsserviços foi implementado, utilizando somente ferramentas de \textit{software} livre, de forma integrada à plataforma de cidades inteligentes InterSCity, do Instituto Nacional de Ciência e Tecnologia da Internet do Futuro para Cidades Inteligentes. Para avaliar o desempenho do sistema, um cenário experimental de cidades inteligentes foi criado, a partir de dados reais de posições de ônibus da frota municipal da cidade de São Paulo. Nos experimentos, o fluxo de dados entrando no sistema variou de seis a dez mil eventos por minuto. Os resultados mostraram que o sistema escala automaticamente, aumentando o número de instâncias conforme sua carga de entrada aumenta, e que ele mantém a variação na latência da detecção de eventos baixa.
+Este trabalho apresenta uma arquitetura de microsserviços para CEP distribuído nativa de nuvem, que gerencia dinamicamente os recursos computacionais usados na execução. Nela, o processamento de eventos complexos é dividido entre múltiplas instâncias de um mesmo microsserviço. O estilo arquitetural de coreografia foi usado, no qual a distribuição do processamento é coordenada entre as instâncias e não há um serviço nuclear que comanda todo o sistema. Isso resulta em uma maior tolerância a falhas, pois uma falha em uma única instância não afeta a detecção de eventos nas outras. Um protótipo da arquitetura de microsserviços foi implementado, utilizando somente ferramentas de \textit{software} livre, de forma integrada à plataforma de cidades inteligentes InterSCity, do Instituto Nacional de Ciência e Tecnologia da Internet do Futuro para Cidades Inteligentes. Para avaliar o desempenho do sistema, um cenário experimental de cidades inteligentes foi criado, a partir de dados reais de posições de ônibus da frota municipal da cidade de São Paulo. Nos experimentos, o fluxo de dados entrando no sistema variou de seis a dez mil eventos por minuto. Os resultados mostraram que o sistema escala automaticamente, aumentando o número de instâncias conforme sua carga de entrada aumenta, e que ele mantém a variação na latência da detecção de eventos baixa.\\
 
 %, mesmo durante a expansão do número de nós de processamento, sem perda significativa de eventos detectados.
  
@@ -289,8 +290,7 @@ Este trabalho apresenta uma arquitetura de microsserviços para CEP distribuído
  %\todo[inline]{Fernando, esse resumo não explica o que você fez no trabalho e nem os resultados que você obteve. Você apresenta como problema a falta de implementações de "CEP nativas de nuvem". Da forma como está escrito, isso não parece um problema de pesquisa. Se for possível evitar, é melhor nem usar "nativo de nuvem" no resumo.  Você precisa falar sobre o problema de escalabilidade das arquiteturas de CEP distribuídas tradicionais. Depois, precisa dizer o que a sua arquitetura tem de diferente e porque isso trata de forma melhor o problema. Precisa dizer que ela se baseia em microsserviços coreografados, que é auto-escalável, etc. Você diz no resumo que implementou dois algoritmos, mas não fala de que se tratam, de qual é a diferença entre eles.  Depois, disse que usou dados de ônibus para fazer um experimento, mas não disse o que foi feito no experimento. Diz que o "algoritmo com maior agilidade" "expressou o melhor custo" e "maior eficácia". O que isso quer dizer? O que significa ter mais agilidade nesse contexto? E mais eficácia?  E qual dos dois algoritmos foi melhor? Basicamente, o que você disse foi: "implementei dois algoritmos e um foi melhor que o outro".  O leitor termina de ler o resumo sem saber nada sobre a sua arquitetura, os algoritmos de balanceamento e os resultados da análise de desempenho.  :(  Ao falar sobre os resultados da análise, você precisa dizer que, nos experimentos, o seu sistema se mostrou capaz de se ajustar às variações de carga de trabalho ao longo do tempo, garantindo baixa variação de latência de detecção dos eventos.}
  
  
- \\
-\noindent \textbf{Palavras-chave:} Cidades Inteligentes, Processamento de Eventos Complexos, Processamento de \emph{Big Data}, Computação de Nuvem, Escalabilidade, Microsserviços.
+ \noindent \textbf{Palavras-chave:} Cidades Inteligentes, Processamento de Eventos Complexos, Processamento de \emph{Big Data}, Computação de Nuvem, Escalabilidade, Microsserviços.
 
 % ---------------------------------------------------------------------------- %
 % Abstract
@@ -302,12 +302,11 @@ Universidade de São Paulo, São Paulo, 2020.
 \\
 
 Complex Event Processing is one of the most used techniques to deal with real-time data. CEP considers each new piece of data as an event and allows the definition of event types from the detection of patterns within incoming input events. Despite an extensive list of CEP implementations currently available, few offer open-sourced cloud-native solutions, that fullfill the necessary requirements os cloud-native systems: self-scalability, fault tolerance and the definition of system's infrastructure as code or script. Cloud-native systems are essential in order to continually processa real-time data from institutions such as smart cities, that procude a great volume a variety of data, since they can potentinaly save costs by discarding unused computational resources when incoming data flow is decreasing or request aditional resources when incoming data flow is increasing. Here we built a microsservice architecture for CEP that fullfils the cloud native requirements, where event processing is distributed among distinct instances of the same microsservice. These instances use an choreographic based coordination style, in which no single part controls the rest of the system, and task distribution is decided by compromise between all parts of the system. This results in greater system fault tolerance, since ther is no single poitn of failure that can impact the rest of the system. A prototype of this architecture
-was developed, using only open-sourced tools, to be integrated ont the InterSCity Smart City Platform, from INCT Future Internet for Smart Cities. In order to evaluate system self-scalability, an smart city experimental scenario was design, using continuos data simulation of real time bus traffic data from São Paulo City. Since bus traffic greatly increases during the simulation time interval, the system can be evaluated in an overload workload. Results show that the system can mantain a latency level compatible wit other real time systems, even during node overload and system expansion, with minimal event loss.
+was developed, using only open-sourced tools, to be integrated ont the InterSCity Smart City Platform, from INCT Future Internet for Smart Cities. In order to evaluate system self-scalability, an smart city experimental scenario was design, using continuos data simulation of real time bus traffic data from São Paulo City. Since bus traffic greatly increases during the simulation time interval, the system can be evaluated in an overload workload. Results show that the system can mantain a latency level compatible wit other real time systems, even during node overload and system expansion, with minimal event loss.\\
 
 
 \todo[inline]{Isto está horrivel}
 
-\\
 \noindent \textbf{Keywords:} Cloud-Native, Complex Event Processing, Smart Cities, CEP, Big Data, Real-time Processing, Scalability, Microservices.
 
 % ---------------------------------------------------------------------------- %
