--- a/cap-conclusoes.tex
+++ b/cap-conclusoes.tex
@@ -4,23 +4,40 @@
 
 
 
-As técnicas e ferramentas de Processamento de Eventos Complexos foram desenvolvidas com o propósito explícito de lidar com dados em contínuos\todo{"fluxos contínuos de dados"?}. A lista de operadores desenvolvida para a definição de tipos de eventos é extensa, mas necessária para que as linguagens de definição de consultas em tempo real sejam tão abrangentes em sua cobertura de possíveis tipos de eventos quanto as linguagens de consulta a bancos de dados relacionais são no campo de consultas por lote.
-\tod
+As técnicas e ferramentas de Processamento de Eventos Complexos foram desenvolvidas com o propósito explícito de lidar com o processamento de dados em tempo real de forma contínua. A lista de operadores desenvolvida para a definição de tipos de eventos é extensa, mas necessária para que as linguagens de definição de consultas em tempo real sejam tão abrangentes em sua cobertura de possíveis tipos de eventos quanto as linguagens de consulta a bancos de dados relacionais são no campo de consultas por lote.
 
-A partir da combinação de mecanismos de processamento de eventos complexos de código aberto com sistemas de mensageria em tempo real, de isolamento de ambiente de execução, armazenamento de dados em memória RAM e técnicas de orquestração de nuvem, foi criada neste trabalho uma arquitetura de microsserviços que trás\todo{"traz" ("trás" é de doer!)} a pesquisa de processamento de eventos complexos para o ambiente de desenvolvimento nativo de nuvem. Este é um passo importante, visto que o crescimento na popularidade e uso de plataformas de nuvens para o processamento em todas as áreas da computação está impulsionando a pesquisa de sistemas nativos de nuvem para o melhor aproveitamento dos recursos disponíveis nesse ambiente de execução.
+Uma dificuldade encontrada em utilizar Processamento de Eventos Complexos para a detecção de eventos em grande escala, como em aplicações para cidades inteligente, é a implementação de um sistema que seja escalável, ou seja, que consiga aumentar sua capacidade de processamento de acordo com a carga atribuída a ele. Se o aumento na capacidade de processamento requer um administrador humano para monitorar o sistema e a carga de entrada constantemente e aplicar as medidas necessárias de acordo com o incremento de carga, o desempenho do sistema fica limitado ao tempo de resposta do administrador. Para atender requisitos de tempo real no monitoramento contínuo de um ambiente urbano, o próprio sistema deve ser capaz de aumentar sua alocação de recursos quando necessário, ou seja, deve ser auto-escalável. As soluções encontradas atualmente na literatura, apesar de apresentar varias técnicas para a distribuição do processamento de eventos, não exploram o desenvolvimento de sistemas de processamento de eventos complexos que sejam auto-escaláveis e gerenciem dinamicamente o uso de recursos do sistema e concomitantemente consideram a tolerância a falhas para cada nó de processamento um requisito igualmente importante, de forma que tendem a focar na busca só pela escalabilidade ou tolerância a falhas.
 
-Uma dificuldade encontrada em utilizar Processamento de Eventos Complexos para a detecção de eventos em grande escala, como em aplicações de tempo real para cidades inteligente, é a implementação de um sistema que seja escalável, ou seja, que consiga aumentar sua capacidade de processamento de acordo com a carga atribuída a ele. Entretanto, se o aumento na capacidade de processamento requer um administrador humano para monitorar o sistema e a carga de entrada constantemente e aplicar as medidas necessárias de acordo com o incremento de carga, o desempenho do sistema fica limitado ao tempo de resposta do administrador. Para construir um sistema em tempo real para o monitoramento contínuo de um ambiente urbano, o próprio sistema deve conseguir aumentar e diminuir seu uso de recursos, ou seja, deve ser auto-escalável. Na arquitetura desenvolvida neste trabalho, a auto-escalabilidade foi atingida a partir de um mecanismo de detecção de sobrecarga de recursos e da distribuição do processamento de eventos entre múltiplas instâncias de um mesmo microsserviço.\todo{complementar o parágrafo falando sobre o uso da coreografia no balanceamento de carga entre as instâncias.} 
+%\todo[inline]{Neste ponto, cabe falar algo sobre os trabalhos relacionados. Dizer que encontra-se na literatura diversas propostas para distribuição de CEP, mas que não são soluções auto-escaláveis e nem exploram o uso de plataformas de nuvem em todo o seu potencial. É importante incluir esse novo parágrafo aqui, para evidenciar o ineditismo da solução que é proposta no seu trabalho.}
 
-Além da auto-escalabilidade, há outros dois requisitos que guiam o desenvolvimento de software nativo de nuvem: a tolerância a falhas do ambiente de execução e o uso de infraestrutura como código. Para atingir a tolerância a falhas no sistema inteiro, todos os microsserviços foram desenvolvidos com mecanismos de recuperação. Esses mecanismos, em caso da ocorrência de uma falha, retornam o microsserviço ao seu estado de antes da falha. Também foram levados em consideração na escolha do sistema de bancos de dados e do sistema de mensageria usados os seus mecanismos de recuperação de falhas. Complementar a isto, o uso de soluções de orquestração de nuvem permitiu que as especificações dos recursos computacionais utilizados por cada parte do sistema fossem escritas em código. Disso, resultou que a re-instanciação de qualquer uma das partes do sistema \texttt{CEP Handler} é feita automaticamente pelo sistema de orquestração de nuvem, utilizando a mesma quantidade de recursos computacionais. Estas três técnicas, auto-escalabilidade, infraestrutura como código e tolerância a falhas no ambiente de execução, se completam no desenvolvimento de qualquer sistema nativo de nuvem e servem para garantir um funcionamento contínuo e com altos níveis de disponibilidade para o usuário. 
-\todo[inline]{Você já fala sobre a implementação no parágrafo acima. Mas começa o parágrafo abaixo como se estivesse falando dela pela primeira vez. É preciso melhorar a coesão deles.}
+A partir da combinação de mecanismos de processamento de eventos complexos de código aberto com sistemas de mensageria em tempo real, de isolamento de ambiente de execução, armazenamento de dados em memória RAM e técnicas de orquestração de nuvem, foi criada neste trabalho uma arquitetura de microsserviços que traz a pesquisa de Processamento de Eventos Complexos para o ambiente de desenvolvimento nativo de nuvem. Este é um passo importante, visto que o crescimento na popularidade e uso de plataformas de nuvens para o processamento em todas as áreas da Computação está impulsionando a pesquisa de sistemas nativos de nuvem para o melhor aproveitamento dos recursos disponíveis nesse ambiente de execução.
 
-Para avaliar a arquitetura proposta, foi construído um protótipo do sistema, utilizando somente ferramentas de código aberto, como visto no Capítulo \ref{cap:prototype}, e desenvolvido um cenário experimental utilizando dados do transporte público do município de São Paulo, que está descrito em \autoref{cap:experimento}. O protótipo foi construído como um novo serviço para a plataforma de software livre para cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}. Para o cenário experimental foram utilizados dados de três horas contínuas de todos os ônibus que servem a infraestrutura pública de transportes na capital paulista. Estas três hora compões um dos períodos de maior variação no número de veículos em circulação, e consequentemente, uma grande variação de número de eventos entrando no sistema. A rede de processamento utilizada no cenário do experimento utilizou tipos de eventos simples, que não utilizam janelas de agregação de eventos de entrada, bem como tipos de eventos que as utilizam. Um dos desafios na implementação do sistema foi a criação de um método para a realocação dos tipos de eventos entre nós de processamento com a garantia que nenhum evento seria descartado durante o processo de realocação. Isto foi atingido a partir do cálculo, utilizando dados da definição de cada tipos de evento, do tempo necessário para reconstruir o estado da janela de agregação em outro nó de processamento.
+Na arquitetura desenvolvida neste trabalho, chamada de \texttt{CEP Handler}, a auto-escalabilidade é provida por um mecanismo de detecção de sobrecarga de recursos e de distribuição do processamento de eventos entre múltiplas instâncias de um mesmo microsserviço rodando na nuvem. O sistema detecta automaticamente a necessidade da criação de novas instâncias de processamento de eventos e as requisita utilizando as mesmas especificações de recursos computacionais iguais aos utilizados pelas instâncias em sobrecarga. 
+
+A tolerância a falhas é satisfeita no sistema pela escolha do estilo arquitetural de coreografia na comunicação entre instâncias de processamento de eventos. Nesse estilo de coordenação não há uma instância central que distribui o processamento de eventos, então as instâncias devem entrar em acordo sobre qual instância processará qual tipo de evento. Dessa forma a detecção de eventos em uma instância não é impactada pela falha de execução em outra instância. Além disso, cada instância possui um mecanismo para verificação ao início do processamento de eventos se ela foi terminada indevidamente previamente ou não e consegue recadastrar os tipos de eventos previamente cadastrados. O cumprimento desses dois requisitos garante que o sistema desenvolvido seja nativo de nuvem e diminui a necessidade de intervenção manual total durante seu funcionamento. % \todo{Complementar o parágrafo, falando sobre o uso da coreografia no balanceamento de carga entre as instâncias. Você não falou sobre a coreografia em nenhum lugar da conclusão.} 
+
+%Além da auto-escalabilidade, há outros dois requisitos que guiam o desenvolvimento de um software nativo de nuvem: a tolerância a falhas do ambiente de execução e o uso de infraestrutura como código. Para atingir a tolerância a falhas no sistema \texttt{CEP Handler} inteiro, todos os microsserviços foram desenvolvidos com mecanismos de recuperação e foi escolhido o estilo arquitetural de coreografia para a coordenação entre as instâncias de processamento de eventos. Isso permite que o processamento de eventos não seja impactado em instâncias que não encontrem falhas em sua execução. Esses mecanismos, em caso de ocorrência de uma falha, retornam o microsserviço ao seu estado de antes da falha. Também foram levados em consideração na escolha do sistema de bancos de dados e do sistema de mensageria usados os seus mecanismos de recuperação de falhas. Complementarmente a isso, o uso de soluções de orquestração de nuvem permitiu que as especificações dos recursos computacionais utilizados por cada parte do sistema fossem escritas em código. Com isso, a re-instanciação de qualquer uma das partes do sistema \texttt{CEP Handler} é feita automaticamente pelo sistema de orquestração de nuvem, utilizando a mesma quantidade de recursos computacionais. Essas três técnicas -- auto-escalabilidade, infraestrutura como código e tolerância a falhas no ambiente de execução -- se completam no desenvolvimento de qualquer sistema nativo de nuvem e servem para garantir um funcionamento contínuo e com altos níveis de disponibilidade para o usuário. 
+
+A partir da pesquisa de trabalhos relacionados a distribuição de processamento de eventos complexos, detalhada no Capítulo \ref{cap:trabalhos}, dois algoritmos de balanceamento de carga foram criados para o \texttt{CEP Handler}. Esses algoritmos definem a ordem de realocação dos tipos de eventos de um nó de processamento para outro. Um dos algoritmos seleciona o tipo de evento a ser realocado a partir do tempo necessário para reconstruir seu estado em outro nó de processamento. O outro algoritmo seleciona o tipo de evento a ser realocado considerando a similaridade entre os seus tipos de entrada e os tipos de entrada dos demais tipos processados no mesmo nó, tentando manter agrupados num mesmo nó os tipos que compartilham os mesmos tipos de entrada, minimizando assim a duplicação na transmissão de eventos para os nós de processamento do sistema.
+
+Para avaliar a arquitetura proposta, foi construído um protótipo dela utilizando somente ferramentas de código aberto, como visto no Capítulo \ref{cap:prototype}. O protótipo foi implementado como um serviço da plataforma de software livre para cidades inteligentes InterSCity~\citep{del2019design}, do Instituto Nacional de Ciência e Tecnologia (INCT) da Internet do Futuro para Cidades Inteligentes~\citep{Interscitysite}.
 
 
-A partir de pesquisa realizada nos trabalhos relacionados, detalhada em \autoref{cap:trabalhos}, a distribuição de processamento de eventos complexos, dois algoritmos de balanceamento de carga foram criados que servem para selecionar a ordem de realocação dos tipos de eventos entre um nó de processamento e outro. Um dos algoritmos seleciona os tipos de eventos a serem realocados a partir do tempo necessário para reconstruir seu estado em outro nó de processamento enquanto o outro algoritmo seleciona os tipos de evento a partir da similaridade dos tipos de eventos de entrada de cada um, tentando agrupar os tipos de evento que compartilham os mesmos tipos de evento de entrada, minimizando a transmissão de eventos entre os nós de processamento do sistema.
 
-O experimento foi executado com dez repetições ao total, cinco utilizando cada um dos algoritmos de balanceamento de carga. A partir dos resultados coletados, descritos em \autoref{cap:resultados}, pode-se verificas que o sistema apresenta uma latência condizente com o cenário apresentado, normalmente de menos de cem milissegundos, além de demonstrar que o sistema consegue automaticamente verificar uma sobrecarga no uso de recursos computacionais e requisitar recursos adicionais do provedor de nuvem utilizado. Para a rede de processamento de eventos utilizada no experimento, nenhum dos dois algoritmos de balanceamento de carga apresentou um desempenho superior significativo em relação ao outro. Dos tipos de eventos utilizados no cenários, os tipos de eventos que detectavam situações que são de interesse de engenheiros de tráfego municipais, especificamente a detecção de agrupamento próximo de ônibus da mesma linha e o monitoramento da velocidade média dos principais corredores de ônibus, realizaram suas respectivas detecções sem problemas, mesmo com o aumento da carga de eventos de entrada.
 
+O monitoramento de tráfego de ônibus do sistema de transporte
+público da cidade de São Paulo, SP, foi usado como cenário experimental na avaliação do protótipo. Como apresentado no Capítulo \ref{cap:experimento}, para o experimento, foram utilizados dados de três horas contínuas da localização de ônibus que servem a infraestrutura pública de transportes na capital paulista. Essas três horas compreendem um dos períodos de maior variação no número de ônibus em circulação e, consequentemente, grande variação de número de eventos entrando no sistema. Foram coletados dados no dia quatro de novembro de 2019, das 7h50 até às 11h02. Ao total os dados referenciam 2.360 linhas de ônibus e 26.624 veículos. Foram utilizados dados de trinta porcento de todas as linhas da cidade, totalizando 708 linhas. Esta restrição foi adotada pela limitação do número de canais que uma única instância do Rabbitmq suportava. Foi escolhido utilizar uma única instância de \textit{broker} para minimizar a variação de latência que a transmissão de dados poderia atingir caso os dados fossem transmitidos para instâncias distintas, em máquinas virtuais distintas. 
+%A partir da seleção de 708 linhas, foram criados 15.729 tipos de eventos 
+%\todo{Aqui, é preciso falar dos números que caracterizam os dados: número de linhas e ônibus considerados no experimento, número total eventos de localização, taxa de entrada dos dados, etc. }. 
+
+A partir da seleção de 708 linhas, foram criados 15.729 tipos de eventos, para cinco categorias de tipos de eventos distintas, nas quais cada uma utilizava métodos distintos de agregação de eventos. A rede de processamento de eventos criada para o experimento usou tanto tipos de eventos simples, que não possuem janelas de agregação de eventos de entrada, quanto tipos de eventos que as utilizam. Um dos desafios na implementação do sistema foi a criação de um método para a realocação dos tipos de eventos entre nós de processamento com a garantia de que nenhum evento seria descartado durante o processo de realocação. Isso foi feito a partir do cálculo do tempo necessário para reconstruir o estado da janela de agregação do tipo de evento em realocação, com base na própria definição do tipo. Até que o tempo necessário para a reconstrução do estado no novo nó transcorra, o tipo de evento continua sendo detectado pelo seu nó de processamento original.
+
+O experimento foi executado com dez repetições ao total, cinco para cada um dos algoritmos de balanceamento de carga implementados. A partir dos resultados coletados, descritos no Capítulo~\ref{cap:resultados}, pode-se verificar que o sistema apresentou latências que normalmente ficaram abaixo de cem milissegundos,  satisfazendo os requisitos de processamento em tempo real do cenário considerado. Além disso, os experimentos mostraram que o sistema consegue automaticamente verificar uma sobrecarga no uso de recursos computacionais e requisitar recursos adicionais do provedor de nuvem utilizado, se auto-escalando e rebalanceando conforme a variação da carga de trabalho. Não foi observada diferença significativa entre os desempenhos dos dois algoritmos de balanceamento de carga implementados.
+%Para a rede de processamento de eventos utilizada, nenhum dos dois algoritmos de balanceamento de carga apresentou um desempenho superior significativo em relação ao outro. 
+
+
+%Na rede de processamento do experimento, os principais tipos de eventos que detectavam situações que são de interesse de engenheiros\todo{Ué? Todos os tipos de eventos da rede me parecem de interesse para os engenheiros.} de tráfego municipais, especificamente a detecção de agrupamento de ônibus da mesma linha e o monitoramento da velocidade média dos principais corredores de ônibus, realizaram suas respectivas detecções sem problemas, mesmo com o aumento da carga de eventos de entrada.
+%\todo[inline]{Esse parágrafo acima ficou meio bobo, não parece trazer alguma nova informação interessante. Minha sugestão é removê-lo do texto. }
 
 
 
@@ -53,7 +70,16 @@ O experimento foi executado com dez repetições ao total, cinco utilizando cada
 %------------------------------------------------------
 \section{Considerações Finais} 
 
-A partir do estudo das pesquisas e técnicas de processamento em tempo real e de sistemas nativos a nuvem foi possível desenvolver um sistema que não depende de monitoramento ativo por parte de um administrador para se recuperar de falhas no ambiente de execução e se auto-escalar de acordo com a carga de entrada. Para a implantação de serviços que tornem as cidades inteligentes, sistemas que cumprem os requisitos para serem nativos de nuvem se fazem necessários para que o cidadão tenha uma experiência confortável usando serviços que se conectam com arcabouços de plataformas de cidades inteligentes. A combinação das tecnologias de processamento de eventos complexos e de sistemas nativos de nuvem se provou frutífera no desenvolvimento de uma arquitetura e protótipo que cumprem os requisitos mencionados anteriormente. A execução dos experimentos demonstrou que o sistema desenvolvido é auto-escalável sem impactar significativamente a latência de transmissão e detecção dos tipos de eventos definidos.
+A partir do estudo das pesquisas e técnicas de processamento em tempo real e de sistemas nativos a nuvem foi possível desenvolver um sistema que não depende de monitoramento ativo por parte de um administrador para se recuperar de falhas no ambiente de execução e se auto-escalar de acordo com a carga de entrada. Para o oferecimento de serviços que tornem as cidades inteligentes, sistemas que cumprem os requisitos para serem nativos de nuvem se fazem necessários para que plataformas de cidades inteligentes servindo a cidade consiga detectar ocorrências de interesse em tempo real, ajustando-se automaticamente a variação de carga entrando no sistema e se recuperando de possíveis falhas sem a necessidade de intervenção manual de operadores do sistema.
+
+
+%cidade tenha uma experiência confortável usando serviços que se conectam com arcabouços de plataformas de cidades inteligentes. 
+%\todo[inline]{Sobre o parágrafo acima, eu acho que o ponto mais importante não é prover uma 'experiência confortável' para os cidadãos, mas sim garantir que a detecção de eventos ocorra com a rapidez oportuna para a aplicação em questão (principalmente quando há requisitos de tempo real). Então, acho que você não deve reduzir o problema apenas à uma questão de conforto. Sugiro que reescreva o parágrafo com isso em mente.}
+
+A combinação das tecnologias de processamento de eventos complexos e de sistemas nativos de nuvem se provou frutífera no desenvolvimento de uma arquitetura e implementação que cumprem os requisitos mencionados anteriormente. 
+Os resultados do experimento mostraram que o sistema desenvolvido é auto-escalável e mantém a variação na latência de transmissão e detecção dos eventos baixa.
+
+%A execução dos experimentos demonstrou que o sistema desenvolvido é auto-escalável sem impactar significativamente a latência de transmissão e detecção dos tipos de eventos definidos.
 
 
 
@@ -67,13 +93,18 @@ A partir do estudo das pesquisas e técnicas de processamento em tempo real e de
 %------------------------------------------------------
 \section{Sugestões para Pesquisas Futuras} 
 
-O desenho do experimento foi limitado por vários fatores, que poderiam ser explorados individualmente para um melhor entendimento de como cada um afeta o desempenho geral do sistema. Como o intuito era criar um cenário relacionado a cidade inteligentes, foram utilizados dados do transporte público, porém seria interessante o uso de dados de qualquer área que se beneficie com processamento em tempo real. À seguir estão algumas das sugestões de como explorar ainda mais a arquitetura e o protótipo:
+O desenho do experimento foi limitado por vários fatores, como escolha do RabbitMQ como \textit{broker} usado no protótipo e experimento, a coleta de dados para o experimento do sistema da SPTrans que não oferece nativamente um método para baixar todos os dados de posições de um dia inteiro, o uso de dados só dos ônibus municipais, sem levar em conta os outros métodos de transporte urbanos ou mesmo outros fatores de interesse em monitoramento na cidade, entre outros. Esses fatores poderiam ser explorados individualmente para um melhor entendimento de como cada um afeta o desempenho geral do sistema  \texttt{CEP Handler}%\todo{Aqui seria bom você exemplificar os fatores, aprofundar um pouco mais, porque a continuação do texto parece não desenvolver essa ideia.}.
+Como o intuito era criar um cenário experimental de grande porte relacionado a cidades inteligentes, foram utilizados dados do monitoramento de tráfego de ônibus do transporte público. Mas para poder caracterizar o desempenho do sistema de forma mais geral, é necessário analisá-lo com outros tipos de aplicações que se beneficiem do processamento de dados em tempo real. 
+
+À seguir, estão algumas das sugestões de como explorar ainda mais a arquitetura e o protótipo desenvolvidos neste trabalho:
 
 \begin{itemize}
     \item Uso de dados para o experimento com maior variação de fluxo, para testar melhor o tempo necessário para escalar o sistema.
-    \item Inclusão de suporte para outros operadores de janelas de CEP, além de janelas temporais externas e janelas de eventos. 
-    \item Experimento com tipos de eventos mais diversos, com mais tipos de operadores e uma rede de processadores de eventos mais complexa.
-    \item Paralelização do processo de realocação de eventos em \textit{threads}- para diminuir o tempo necessário para a redistribuição de tipos de eventos entre instancias do \texttt{CEP Worker}.
-    \item Comparação do uso de outros sistemas de mensageria além do Rabbitmq, que foi um dos fatores limitantes na definição do experimento.
-    \item Inclusão de um sistema de recuperação de falhas para reconstrução dos estados dos tipos de eventos a partir do re-envio dos eventos de entrada de acordo com as janelas definidas pelos tipos de eventos processados por cada \texttt{CEP Worker}.
+    \item Inclusão de suporte para outros operadores de janelas de CEP, além de janelas temporais externas e janelas de eventos.
+    \item Experimentos com tipos de eventos mais diversos, com mais tipos de operadores e uma rede de processadores de eventos mais complexa.
+    \item Paralelização do processo de realocação de eventos em \textit{threads}, para diminuir o tempo necessário para a redistribuição de tipos de eventos entre instâncias de \texttt{CEP Worker}.
+    \item Comparação do uso de outros sistemas de mensageria além do RabbitMQ, que foi um dos fatores limitantes na definição do experimento.
+    \item Inclusão de um sistema de recuperação de falhas para reconstrução dos estados dos tipos de eventos a partir do reenvio dos eventos de entrada de acordo com as janelas definidas pelos tipos de eventos processados por cada \texttt{CEP Worker}.
 \end{itemize}
+
+%\todo[inline]{Padronizar no texto a capitalizaçã de 'rabbitmq'. Ele aparece de várias formas diferentes: RabitMQ, Rabitmq e rabitmq}
