--- a/cap-prototipo.tex
+++ b/cap-prototipo.tex
@@ -93,7 +93,7 @@ Entre os orquestradores de \textit{software} livre, três se destacam:
 
 \section{Transmissão Assíncrona}
 
-Para a transmissão de eventos em tempo real foi escolhido o \textit{broker} de mensagens Rabbitmq~\citep{RabbitMq}. Rabbitmq é um dos mais usados brokers atualmente, pois suporta vários protocolos de comunicação assíncrona~\citep{Dobbelaere:2017:KVR:3093742.3093908}. O principal fator para a escolha do Rabbitmq como \textit{broker} foi a compatibilidade com a plataforma InterSCity, cuja implementação já utiliza o RabbitMQ como mensageiro assíncrono. Já que o sistema proposto neste trabalho foi desenvolvido como uma extensão da plataforma InterSCity, é interessante utilizar em sua implementação as mesmas ferramentas usadas na plataforma, para permitir uma maior integração entre eles.
+Para a transmissão de eventos em tempo real foi escolhido o \textit{broker} de mensagens RabbitMQ~\citep{RabbitMq}. RabbitMQ é um dos mais usados brokers atualmente, pois suporta vários protocolos de comunicação assíncrona~\citep{Dobbelaere:2017:KVR:3093742.3093908}. O principal fator para a escolha do RabbitMQ como \textit{broker} foi a compatibilidade com a plataforma InterSCity, cuja implementação já utiliza o RabbitMQ como mensageiro assíncrono. Já que o sistema proposto neste trabalho foi desenvolvido como uma extensão da plataforma InterSCity, é interessante utilizar em sua implementação as mesmas ferramentas usadas na plataforma, para permitir uma maior integração entre eles.
 No protótipo do sistema aqui apresentado, o RabbitMQ opera dentro de um contêiner Docker, cuja imagem é disponibilizada oficialmente pelo repositório de imagens Docker Hub. 
 
 
